# data-reduction-photo-selection

./: .gitignore  AGENT.md  Data_Reduction_Lecture_Summary_and_Full_Assignment.md  Makefile  PRD.md  README.md  Roadmap.md  pyproject.toml
data/: README.md
docs/: report_draft.md  submission_email.md
docs/report/: report.tex
experiments/configs/: budget_sensitivity.yaml  d_ablations.yaml  exact_infeasibility.yaml  query_holdout.yaml  scalability.yaml  small.yaml  synthetic.yaml
experiments/results/budget_sensitivity_20260609T115734Z/: batch_metadata.json  results.csv
experiments/results/budget_sensitivity_canonical/: batch_metadata.json  results.csv
experiments/results/d_ablations_20260609T115928Z/: batch_metadata.json  results.csv
experiments/results/d_ablations_canonical/: batch_metadata.json  results.csv
experiments/results/exact_infeasibility_20260609T120233Z/: batch_metadata.json  results.csv
experiments/results/exact_infeasibility_canonical/: batch_metadata.json  results.csv
experiments/results/exact_infeasibility_local/: batch_metadata.json  (+1 more)
output/overleaf/: README.txt  main.tex  references.bib
scripts/: generate_figures.py  run_experiments.py  run_method.py  validate_data.py
src/data_reduction/: __init__.py  config.py  data.py  evaluation.py  experiments.py  similarity.py  utility.py
tests/: test_config.py  test_data_loading.py  test_evaluation.py  test_experiments.py  test_methods.py  test_similarity.py  test_utility.py
tests/fixtures/: photos_missing.csv  photos_unequal.csv  photos_valid.csv  photos_zero.csv  queries_zero.csv
(+340 files in other folders)
